# mantrap

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Manifest.toml  Project.toml  README.md  README.rst  base.ipynb  base.md  base.txt  codecov.yml  ideas.md  main.py  meetings.md  questions.md  setup.py
config/: bfgqm.json  ddhtf.json  trajectron.json  wachx.json
docker/: Dockerfile  build.bash  exec.bash  start.bash  stop.bash
docker/misc/: banner.art
docker/python/: install.bash  setup_visualization.py
docs/: .buildinfo  Makefile  agents.html  attention.html  constraints.html  controllers.html  environment.html  evaluation.html  filter.html  genindex.html  index.html  modules.html  objectives.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  solver.html  visualisation.html
docs/_sources/: attention.rst.txt  constraints.rst.txt  environment.rst.txt  index.rst.txt  modules.rst.txt  objectives.rst.txt  readme.rst.txt  solver.rst.txt  visualisation.rst.txt
docs/source/: agents.rst  constraints.rst  environment.rst  evaluation.rst  filter.rst  index.rst  objectives.rst  simulation.rst  solver.rst  visualisation.rst
evaluation/: evaluation.py  runtime_analysis.py
examples/: attention.ipynb  baseline.ipynb  ellipsoid.ipynb  example_predictions.ipynb  main.ipynb  module_hjr.ipynb  module_interact.ipynb  module_interactive.ipynb  orca.ipynb  potential_field.ipynb  presentation.ipynb  report.ipynb  sim_exp.py  trajectron.ipynb  warm_start.ipynb
examples/baseline/: evaluation.ipynb  experiments.ipynb  qualitative.ipynb
examples/datasets/: eth.ipynb
examples/environment/: orca.ipynb  trajectron.ipynb
examples/eval_data/: eval_data.csv
examples/misc/: controller.ipynb  potential_field.ipynb  scratch.ipynb  sgan.ipynb  timing.py
examples/modules/: goal.ipynb  hj_reachability.ipynb  interactive.ipynb  interactive_pos.ipynb  interactive_prob.ipynb  module_goal.ipynb  warm_start.ipynb
examples/solver/: ignoring.ipynb  warm_start.ipynb
examples/tools/: hjr_approximation.ipynb  initial_trajectory.ipynb  probabilistic_programming.ipynb  reachability.ipynb  reachibility_backward.ipynb  timings.ipynb  warm_starting.ipynb
foo/: README.rst
include/: CMakeLists.txt
include/gmm_stats/: gaussian2d.h  gmm2d.h  gmm_stats.h  types.h  utils.h
include/logging/: logging.h
include/mantrap/: constants.h  types.h
include/mantrap_visualization/: __init__.py  visualize_env.py  visualize_scene.py
include/obstacle/: DTVObstacle.h
include/visualization/: visualize_env.py
lib/: CMakeLists.txt
lib/eigen3/: CMakeLists.txt
lib/gtest/: CMakeLists.txt  googletest_download.cmake
mantrap/: __init__.py  constants.py  trajectron.json
mantrap/agents/: __init__.py  agent.py  integrator.py  integrator_double.py  integrator_single.py
mantrap/attention/: __init__.py  attention_module.py  closest.py  euclidean.py  reachability.py
mantrap/constraints/: __init__.py  constraint_module.py  control_limits.py  min_distance.py  norm_distance.py
mantrap/controller/: __init__.py  p_ahead.py  pi.py
mantrap/environment/: __init__.py  environment.py  iterative.py  sgan.py  social_forces.py  trajectron.py
mantrap/evaluation/: __init__.py  baselines.py  metrics.py  scenarios.py  visualization.py
mantrap/filter/: __init__.py  euclidean.py  filter_module.py  nofilter.py  reachability.py
mantrap/modules/: __init__.py  acc_interact.py  control_limits.py  goal.py  goal_norm.py  hj_reachibility.py  min_distance.py  pos_interact.py  prob_interact.py  speed_limits.py
mantrap/objectives/: __init__.py  acc_interact.py  control_effort.py  goal.py  objective_module.py  pos_interact.py
mantrap/simulation/: __init__.py  abstract.py  distance_field.py  graph_based.py  simulation.py  social_forces.py  trajectron.py
mantrap/solver/: __init__.py  abstract.py  cgrad.py  igrad.py  igrad_greedy.py  (+11 more)
mantrap_evaluation/: __init__.py  configurations.py  evaluation.py  main.py  metrics.py  runtime_analysis.py  scenarios.py
murseco/: __init__.py
notebook/: torch_graph.ipynb
notebooks/: scratchbook.ipynb  simulation.ipynb
ops/: blackify.bash  build_env.bash  requirements.txt  run_tests.bash  run_visualization.bash  scratchbook.bash  setup.bash  setup.py
report/: abstract.tex  appendix.tex  approach.tex  bibliography.bib  conclusion.tex  constraint_dynamics.tex  constraint_safety.tex  exp_baselines.tex  exp_discussion.tex  exp_environments.tex  exp_integration.tex  exp_metrics.tex  exp_result.tex  exp_results.tex  exp_unit.tex  experiments.tex  infopage.tex  intro_contributions.tex  intro_goals.tex  intro_outline.tex  introduction.tex  main.tex  mantrap.bib  nomenclature.tex  objective_goal.tex  objective_interaction.tex  preamble.tex  problem_formulation.tex  related_work.tex  runtime_attention.tex  runtime_unrolling.tex  runtime_warmstart.tex  system_overview.tex  title.tex
ros/: CMakeLists.txt  package.xml  rosconsole.conf
ros/include/mantrap_ros/: conversion.h
ros/launch/: mantrap.launch
ros/msg/: Ado.msg  Ego.msg  Environment.msg  Scene.msg
ros/nodes/: env_publisher.cpp  scene_publisher.cpp  scene_visualizer.py  talker.cpp
scripts/: build_env.py
sphinx/: Makefile
src/: CMakeLists.txt  MANTRAP.jl  environment.jl  main.cpp  types.jl
test/: CMakeLists.txt  ipopt_test.py  runtime_analysis.py  test_2.cpp  test_abstractobstacle.py  test_ados.cpp  test_agents.cpp  test_agents.py  test_angularobstacle.py  test_arrayutils.py  test_cardinalobstacle.py  test_cardinalrobot.py  test_cgrad.py  test_cgrad_ipopt.py  test_datasets.py  test_egos.cpp  test_environment.cpp  test_environment.py  test_eval_metrics.py  test_evaluation.py  test_gmm_stats.cpp  test_gmmobstacle.py  test_graphutils.py  test_igrad.py  test_igrad_graphs.py  test_igrad_ipopt.py  test_ipopt_modules.py  test_ipopt_solvers.py  test_mc_tree_search.py  test_metrics.py  test_modules.py  test_orca.py  test_orca_solver.py  test_planninggraphsearch.py  test_planningmcstatic.py  test_potential_field.py  test_primitives.py  test_problemd2ts.py  test_problemdtcs.py  test_sgrad.py  (+16 more)
(+191 files in other folders)
